[package]
name = "project"
version = "0.1.0"
authors = ["yuuzi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linked_list_allocator = "0.8.4"
lock_api = "0.4.1"
crc = { version = "1.8.1", default-features = false }
futures = { version = "0.3.5", default-features = false, features = ["alloc"] }
crossbeam-queue = { version = "0.2.3", default-features = false, features = ["alloc"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

[lib]
name = "kernel"
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"
opt-level = 0
debug = true
debug-assertions = true
lto = true

[profile.release]
panic = "abort"
opt-level = 3
debug = false
debug-assertions = false
lto = true
